WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103629
Fix the build after
r136095
https://bugs.webkit.org/show_bug.cgi?id=103629
Summary
Fix the build after r136095
Andrei Bucur
Reported
2012-11-29 04:30:17 PST
WebKit doesn't compile due to a type error.
Attachments
Patch
(1.47 KB, patch)
2012-11-29 04:39 PST
,
Andrei Bucur
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Bucur
Comment 1
2012-11-29 04:39:38 PST
Created
attachment 176701
[details]
Patch
jochen
Comment 2
2012-11-29 05:00:04 PST
Comment on
attachment 176701
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=176701&action=review
> Source/WebKit2/Shared/mac/ObjCObjectGraphCoders.mm:97 > + [NSException raise:NSInvalidArgumentException format:@"Can not encode objects of class type '%@'", static_cast<NSString *>(NSStringFromClass([m_root class]))];
that's most certainly the wrong fix. I think instead, this file should #import <Foundation/Foundation.h>
Andrei Bucur
Comment 3
2012-11-29 05:30:27 PST
(In reply to
comment #2
)
> (From update of
attachment 176701
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=176701&action=review
> > > Source/WebKit2/Shared/mac/ObjCObjectGraphCoders.mm:97 > > + [NSException raise:NSInvalidArgumentException format:@"Can not encode objects of class type '%@'", static_cast<NSString *>(NSStringFromClass([m_root class]))]; > > that's most certainly the wrong fix. I think instead, this file should #import <Foundation/Foundation.h>
Tried it and this is not the issue. You can put the NSStringFromClass return value in a NSString variable and then pass that to the formatter and it will work. I like this fix more though.
Alexey Proskuryakov
Comment 4
2012-11-29 10:04:56 PST
Comment on
attachment 176701
[details]
Patch Failing on Lion and Mountain Lion bots. I can't reproduce locally, and have no idea why this fails, but we have to get it building again. /Volumes/Data/slave/mountainlion-debug/build/Source/WebKit2/Shared/mac/ObjCObjectGraphCoders.mm:97:107: error: format specifies type 'id' but the argument has type '<dependent type>' [-Werror,-Wformat]
WebKit Review Bot
Comment 5
2012-11-29 10:23:20 PST
Comment on
attachment 176701
[details]
Patch Clearing flags on attachment: 176701 Committed
r136141
: <
http://trac.webkit.org/changeset/136141
>
WebKit Review Bot
Comment 6
2012-11-29 10:23:23 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug