Fix the build after r136095 https://bugs.webkit.org/show_bug.cgi?id=103629

Unreviewed.

Add a static_cast to fix the build.

Patch by Andrei Bucur <abucur@adobe.com> on 2012-11-29

* Shared/mac/ObjCObjectGraphCoders.mm:
(WebKit::ObjCObjectGraphEncoder::baseEncode):

Canonical link: https://commits.webkit.org/121761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136141 268f45cc-cd09-0410-ab3c-d52691b4dbfc